[metadata]
name = umap-project
version = 1.3.0
description = Create maps with OpenStreetMap layers in a minute and embed them in your site.
long_description = file: README.md
long_description_content_type = text/markdown
author = Yohan Boniface
homepage = https://github.com/umap-project/umap
keywords = django leaflet geodjango openstreetmap map
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
include_package_data = True
install_requires =
    Django>=4.1
    django-agnocomplete==2.2.0
    django-compressor==4.3.1
    django-environ==0.10.0
    Pillow==9.5.0
    psycopg2==2.9.6
    requests==2.30.0
    social-auth-core==4.4.2
    social-auth-app-django==5.2.0

[options.extras_require]
dev =
    black==21.10b0
    mkdocs==1.2.3
test =
    factory-boy==3.2.1
    pytest==6.2.5
    pytest-django==4.5.2
docker =
    uwsgi==2.0.21

[options.entry_points]
console_scripts =
    umap = umap.bin:main

[flake8]
# Black crazyness.
max-line-length = 88
